--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div fxHide.lt-md>
   <div fxLayout fxLayoutGap="150px" fxLayoutAlign="center" class="container">
     <div class="center" style="text-align: left;">
-      <p style="font-size: 45px; margin-bottom: 50px; color: burlywood;">
+      <p style="font-size: 45px; margin-bottom: 50px; color: burlywood; line-height: 50px;">
         Helping you to reach success!
       </p>
       <p>JOB CONSULTANCY,</p>
@@ -19,7 +19,7 @@
       <br />
       <section style="width: 500px; text-align: center;">
         <img
-          src="assets/Images/home/mission.jpg"
+          src="assets/Images/home/mission1.jpg"
           style="width: 500x; height: 250px; border-radius: 50%;"
         />
         <h2 style="font-size: 28px;">Our Mission</h2>
@@ -224,7 +224,7 @@
     <div fxLayout="column" fxLayoutGap="80px" fxLayoutAlign="center center">
       <section style="width: 300px; text-align: center;">
         <img
-          src="assets/Images/home/mission.jpg"
+          src="assets/Images/home/mission1.jpg"
           style="width: 400x; height: 200px; border-radius: 50%;"
         />
         <h2 style="font-size: 26px;">Our Mission</h2>
