--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -17,23 +17,22 @@
 .center {
   font-size: 26px;
   margin-top: 200px;
+  margin-left: 250px;
   font-family: Arial, Helvetica, sans-serif;
   color: black;
   line-height: 40px;
 }
 .mobcenter {
-  // position: absolute;
-  // top: 50%;
-  // left: 46%;
+
   margin-top: 15px;
   text-align: center;
-  // transform: translate(-50%, -50%);
+
   color: black;
   line-height: 20px;
 }
 .homeimg {
   width: 40%;
-  height: 650px;
+
   // opacity: 0.3;
 }
 .mobimg {
