--- a/src/app/aboutus/aboutus.component.html
+++ b/src/app/aboutus/aboutus.component.html
@@ -12,7 +12,7 @@
   <div fxLayout="column" fxLayoutGap="80px" fxLayoutAlign="center center">
     <br />
     <h1>Experience You Can Count On</h1>
-    <section style="padding-left: 200px; padding-right: 200px; font-size: 16px; ">
+    <section style="padding-left: 200px; padding-right: 200px; font-size: 16px;word-spacing: 5px; ">
       Our service includes a comprehensive consultation to help identify gaps
       and opportunities, a comprehensive report that includes a project plan
       with timelines and milestones, a cost analysis, and a schedule. We also
@@ -29,7 +29,7 @@
       protection of your interest. <br />
       <ul>
         <li>
-          A perfect business mix of business focus and technology which is
+          A perfect mix of business focus and technology which is
           backed with a specialize team of the recruiter.
         </li>
         <li>
@@ -82,7 +82,7 @@
       protection of your interest. <br />
       <ul>
         <li>
-          A perfect business mix of business focus and technology which is
+          A perfect mix of business focus and technology which is
           backed with a specialize team of the recruiter.
         </li>
         <li>
