--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,7 +22,7 @@
           src="assets/Images/home/mission1.jpg"
           style="width: 500x; height: 250px; border-radius: 50%;"
         />
-        <h2 style="font-size: 28px;">Our Mission</h2>
+        <h2 style="font-size: 28px;font-family: cursive;">Our Mission</h2>
         <p
           style="font-size: 18px; font-family: 'Times New Roman', Times, serif;"
         >
@@ -37,7 +37,7 @@
           src="assets/Images/home/vision.jpg"
           style="width: 500x; height: 250px; border-radius: 50%;"
         />
-        <h2 style="font-size: 28px;">Our Vision</h2>
+        <h2 style="font-size: 28px;font-family: cursive;">Our Vision</h2>
         <p
           style="font-size: 18px; font-family: 'Times New Roman', Times, serif;"
         >
@@ -55,8 +55,8 @@
           text-align: center;
           font-size: 50px;
           line-height: 45px;
-          font-weight: 500;
           color: black;
+          font-family: cursive;
         "
       >
         Clients we Work For:
